feat: add create user endpoint
